# splinter

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  runtime-cost-accounting-requirements.md
samples/: cascade-prd.md  hello-world-prd.md  hello-world-task.yaml
skills/prd/: SKILL.md
skills/run_python/: SKILL.md
splinter/: analyze.py  cli.py  configure.py  enums.py  phases.py  pipeline.py  prd.py  prd_session.py  procreg.py  scheduling.py  setup.py  skills.py  templating.py  tui.py
splinter/agents/: evaluator.py  final_eval.py  gate.py  localizer.py  planner.py  runner.py
src/: feature_x.py
tests/: conftest.py  test_adaptive.py  test_agentic.py  test_analyze_agentic.py  test_analyze_tasks.py  test_analyze_trace_perf.py  test_cascade.py  test_claude_pricing.py  test_codex_provider.py  test_configure_loading.py  test_configure_templates.py  test_core.py  test_cowabunga_prd.py  test_cursor_provider.py  test_eval_skill.py  test_evaluator.py  test_events_jsonl.py  test_fanout.py  test_feature_x.py  test_final_eval.py  test_final_eval_approval_flow.py  test_fire_message_into_session.py  test_live_directive_routing.py  test_localizer.py  test_localizer_concurrent.py  test_migrate_legacy.py  test_obs_errors.py  test_parallel_prompt.py  test_phases.py  test_pipeline_filter_parallel.py  test_plan_phase_parallel.py  test_pricing_store.py  test_pricing_sync.py  test_provider_session_id.py  test_resume_parallel.py  test_run_live_descriptor.py  test_runner_parallel.py  test_scheduling.py  test_session_events_trace.py  test_session_llm_usage.py  (+21 more)
(+40 files in other folders)
