[project]
name = "splinter"
version = "0.1.0"
description = "Multiagent orchestration harness: expensive model plans, cheap models execute."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "textual>=0.60",
    "typer>=0.12",
]

[project.scripts]
splinter = "splinter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
